<resources>
    <string name="app_name">HelloWorld</string>
    <string name="button1">button 1</string>
    <string name="button2">button 2</string>
    <string name="button3">button 3</string>
    <string name="button4">button 4</string>
    <string name="button5">button 5</string>
    <string name="button6">button 6</string>
    <string name="button7">button 7</string>
    <string name="button8">button 8</string>
    <string name="button9">button 9</string>
    <string name="button10">button 10</string>
    <string name="android_practice">Android practice</string>
    <string name="hello">Hello!</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up_with_email">Sign Up with Email</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_button">Login</string>
    <string name="or_connect_with">or connect with</string>
    <string name="activity_practice">Activity Practice</string>
    <string name="select_contact">Select Contact</string>
    <string name="life_cycle">Life Cycle</string>
</resources>
