<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/android_practice"
                android:textSize="24sp" />
            <Button
                android:text="@string/button1"
                style="@style/Button" />
            <Button
                android:text="@string/button2"
                style="@style/Button" />
            <Button
                android:text="@string/button3"
                style="@style/Button" />
            <Button
                android:text="@string/button4"
                style="@style/Button" />
            <Button
                android:text="@string/button5"
                style="@style/Button" />
            <Button
                android:text="@string/button6"
                style="@style/Button" />
            <Button
                android:text="@string/button7"
                style="@style/Button" />
            <Button
                android:text="@string/button8"
                style="@style/Button" />
            <Button
                android:text="@string/button9"
                style="@style/Button" />
            <Button
                android:text="@string/button10"
                style="@style/Button" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>